# backtrader

./: package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/flow-1/scriptlets/: +python#2.py
tasks/add_strategy/: __init__.py  task.oo.yaml
tasks/create_cerebro/: __init__.py  task.oo.yaml
tasks/get_ticker/: __init__.py  task.oo.yaml
tasks/plot_show/: __init__.py  task.oo.yaml
tasks/strategy_profit/: __init__.py  task.oo.yaml
