[project]
name = "default"
version = "0.1.0"
description = ""
authors = [
    {name = "shaun",email = "beingswu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backtrader (>=1.9.78.123,<2.0.0.0)",
    "yfinance (>=0.2.59,<0.3.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "default", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
